--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
+.square{
+    border: 2px dotted red;
+    min-height: 50px;
+}
+
 header{
     background-color: rgb(44,62,80);
     height: 80px;
 }
 
-.square{
-    border: 2px dotted red;
-    min-height: 50px;
+.jumbotron{
+    background-color: rgb(26,188,156);
+    min-height: 300px;
 }
