--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ header{
 }
 
 .jumbotron{
-    background-color: rgb(26,188,156);
     min-height: 300px;
+}
+
+.bkg-color-green{
+    background-color: rgb(26,188,156);
 }
