add spacing- about section

--- a/style.css
+++ b/style.css
@@ -52,6 +52,10 @@ footer{
     margin-top: 30px;
 }
 
+.spacing-bottom-30{
+    margin-bottom: 30px;
+}
+
 .spacing-bottom-10{
     margin-bottom: 10px;
 }
