--- a/style.css
+++ b/style.css
@@ -42,6 +42,14 @@ footer{
     background-color: rgb(44,62,80);
 }
 
+/* Contact me section */
+
+#contact-me .form-control{
+    border-radius: 0;
+    border: 0;
+    border-bottom: 1px solid gray;
+}
+
 /* Spacing */
 
 .spacing-top-50{
